fix(incidents): motivo de rechazo error 500
